RESOLVED FIXED297299
Fix flex-aspect-ratio-img-column-012
https://bugs.webkit.org/show_bug.cgi?id=297299
Summary Fix flex-aspect-ratio-img-column-012
Sammy Gill
Reported 2025-08-12 16:31:02 PDT
This test is currently failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-12 16:31:14 PDT
Sammy Gill
Comment 2 2025-08-12 16:36:41 PDT
EWS
Comment 3 2025-08-13 10:13:56 PDT
Committed 298629@main (856950df4842): <https://commits.webkit.org/298629@main> Reviewed commits have been landed. Closing PR #49295 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.